--- a/.github/workflows/docker-registry.yaml
+++ b/.github/workflows/docker-registry.yaml
@@ -9,12 +9,12 @@ on:
       registry:
         required: true
         type: string
-      registry-password:
-        required: true
-        type: string
-      registry-username:
-        required: true
-        type: string
+      # registry-password:
+      #   required: true
+      #   type: string
+      # registry-username:
+      #   required: true
+      #   type: string
 
 jobs:
   build-and-attest:
@@ -29,7 +29,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to Docker Registry
-        run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.registry-username }} --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        #run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.registry-username }} --password-stdin
 
       - name: Build Docker Image
         run: |
