--- a/.github/workflows/docker-registry.yaml
+++ b/.github/workflows/docker-registry.yaml
@@ -29,22 +29,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Registry
-        run: echo "${{ inputs.docker-password }}" | docker login ${{ inputs.registry }} -u ${{ inputs.docker-username }} --password-stdin
-        #run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.registry-username }} --password-stdin
+      - name: Log in to Docker pass
+        run: echo "${{ inputs.docker-password }}"
+      - name: Log in to Docker user
+        run: echo "${{ inputs.docker-username }}"
+      #   run: echo "${{ inputs.docker-password }}" | docker login ${{ inputs.registry }} -u ${{ inputs.docker-username }} --password-stdin
+      #   #run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.registry-username }} --password-stdin
 
-      - name: Build Docker Image
-        run: |
-          IMAGE_URI=${{ inputs.registry }}/${{ inputs.image-name }}
-          docker build -t $IMAGE_URI:latest .
-          docker push $IMAGE_URI:latest
-          IMAGE_DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' $IMAGE_URI:latest | cut -d'@' -f2)
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
-          echo "IMAGE_DIGEST=$IMAGE_DIGEST" >> $GITHUB_ENV
+      # - name: Build Docker Image
+      #   run: |
+      #     IMAGE_URI=${{ inputs.registry }}/${{ inputs.image-name }}
+      #     docker build -t $IMAGE_URI:latest .
+      #     docker push $IMAGE_URI:latest
+      #     IMAGE_DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' $IMAGE_URI:latest | cut -d'@' -f2)
+      #     echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+      #     echo "IMAGE_DIGEST=$IMAGE_DIGEST" >> $GITHUB_ENV
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.IMAGE_URI }}
-          subject-digest: "sha256:${{ env.IMAGE_DIGEST }}"
-          push-to-registry: true
+      # - name: Generate artifact attestation
+      #   uses: actions/attest-build-provenance@v2
+      #   with:
+      #     subject-name: ${{ env.IMAGE_URI }}
+      #     subject-digest: "sha256:${{ env.IMAGE_DIGEST }}"
+      #     push-to-registry: true
