--- a/.github/workflows/docker-registry.yaml
+++ b/.github/workflows/docker-registry.yaml
@@ -9,12 +9,12 @@ on:
       registry:
         required: true
         type: string
-      docker-password:
-        required: true
-        type: string
-      docker-username:
-        required: true
-        type: string
+      # docker-password:
+      #   required: true
+      #   type: string
+      # docker-username:
+      #   required: true
+      #   type: string
 
 
 jobs:
@@ -30,9 +30,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to Docker pass
-        run: echo "${{ inputs.docker-password }}"
+        run: echo "${{ secrets.DOCKER_PASSWORD }}"
       - name: Log in to Docker user
-        run: echo "${{ inputs.docker-username }}"
+        run: echo "${{ secrets.DOCKER_USERNAME }}"
       #   run: echo "${{ inputs.docker-password }}" | docker login ${{ inputs.registry }} -u ${{ inputs.docker-username }} --password-stdin
       #   #run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.registry-username }} --password-stdin
 
