--- a/.github/workflows/docker-registry.yaml
+++ b/.github/workflows/docker-registry.yaml
@@ -9,12 +9,13 @@ on:
       registry:
         required: true
         type: string
+    secrets:
       DOCKER_PASSWORD:
         required: true
-        type: string
+        # type: string
       DOCKER_USERNAME:
         required: true
-        type: string
+        # type: string
 
 
 jobs:
@@ -30,9 +31,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to Docker pass
-        run: echo "${{ inputs.DOCKER_PASSWORD }}"
+        run: echo "${{ secrets.DOCKER_PASSWORD }}"
       - name: Log in to Docker user
-        run: echo "${{ inputs.DOCKER_USERNAME }}"
+        run: echo "${{ secrets.DOCKER_USERNAME }}"
       #   run: echo "${{ inputs.docker-password }}" | docker login ${{ inputs.registry }} -u ${{ inputs.docker-username }} --password-stdin
       #   #run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.registry-username }} --password-stdin
 
