--- a/.github/workflows/docker-registry.yaml
+++ b/.github/workflows/docker-registry.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Log in to Docker user
         #run: echo "${{ secrets.DOCKER_USERNAME }}"
       #   run: echo "${{ inputs.docker-password }}" | docker login ${{ inputs.registry }} -u ${{ inputs.docker-username }} --password-stdin
-        run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.registry-username }} --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ inputs.DOCKER_USERNAME }} --password-stdin
 
       - name: Build Docker Image
         run: |
