--- a/.github/workflows/docker-registry.yaml
+++ b/.github/workflows/docker-registry.yaml
@@ -41,6 +41,7 @@ jobs:
         run: |
           IMAGE_URI=${{ inputs.registry }}/${{ inputs.image-name }}
           docker build -t $IMAGE_URI:latest .
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push $IMAGE_URI:latest
           IMAGE_DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' $IMAGE_URI:latest | cut -d'@' -f2)
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
