--- a/.github/workflows/docker-registry.yaml
+++ b/.github/workflows/docker-registry.yaml
@@ -43,7 +43,7 @@ jobs:
           docker build -t $IMAGE_URI:latest .
           docker tag $IMAGE_URI:latest manishmf/jmeter:latest
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ inputs.registry }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push $IMAGE_URI:latest
+          docker push manishmf/jmeter:latest
           IMAGE_DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' $IMAGE_URI:latest | cut -d'@' -f2)
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
           echo "IMAGE_DIGEST=$IMAGE_DIGEST" >> $GITHUB_ENV
